--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -1,6 +1,137 @@
 {{#> main}}
   {{#*inline "content"}}
-    <div class="row justify-content-md-center mt-5">
+   <section
+      class="w-full h-screen flex flex-col justify-start items-center mt-28"
+      id="sessao1"
+    >
+      <div
+        class="w-80 h-[550px] bg-gray-200 rounded-lg shadow-[0px_0px_15px_-5px_#2A3DA4]"
+      >
+        <form>
+          <div class="flex flex-col justify-center items-center my-8">
+            <p
+              class="p-2 text-xl font-bold text-[#2A3DA4]"
+              style="text-shadow: 2px 2px 4px"
+            >
+              LOGIN
+            </p>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="#2A3DA4"
+              stroke="#2A3DA4"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-user-round h-24 border-4 border-[#2A3DA4] rounded-full p-1 shadow-[0px_1px_5px_#2A3DA4]"
+            >
+              <circle cx="12" cy="8" r="5" />
+              <path d="M20 21a8 8 0 0 0-16 0" />
+            </svg>
+          </div>
+          <div class="flex flex-col justify-center items-center gap-6 mt-5">
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="E-mail"
+              required
+              class="w-3/4 p-2 border-2 rounded-sm text-[#2A3DA4] border-[#2A3DA4] shadow-[0px_3px_10px_#2A3DA4]"
+            />
+            <div class="w-full flex flex-col gap-1 items-center justify-center">
+              <input
+                type="password"
+                id="password"
+                name="password"
+                placeholder="Senha"
+                required
+                class="w-3/4 p-2 border-2 rounded-sm text-[#2A3DA4] border-[#2A3DA4] shadow-[0px_3px_10px_#2A3DA4]"
+              />
+              <div
+                class="w-3/4 h-4 flex justify-end items-end text-[#2A3DA4] font-bold text-xs hover:underline"
+                style="text-shadow: 0px 1px 3px #2a3da4"
+              >
+                <a href="../pages/alterarSenha.html">esqueceu a senha?</a>
+              </div>
+            </div>
+          </div>
+          <div class="w-full flex flex-col justify-center items-center my-8">
+            <button
+              type="submit"
+              class="w-2/3 h-10 bg-[white] text-[#2A3DA4] font-extrabold rounded-lg shadow-[0px_4px_15px_-5px_#2A3DA4] border-[#2A3DA4] hover:bg-transparent hover:border-2"
+            >
+              ENTRAR
+            </button>
+            <div class="flex gap-1 text-xs mt-2 text-[#2A3DA4]">
+              <p class="font-semibold">Novo na LR?</p>
+              <a
+                href="#"
+                class="font-bold hover:underline"
+                style="text-shadow: 0px 1px 3px #2a3da4"
+                >CADASTRE-SE</a
+              >
+            </div>
+            <hr class="w-4/5 border-[1px] border-[#2A3DA4] mt-3" />
+            <div
+              class="w-full h-5 flex flex-row justify-start items-center gap-4"
+            >
+              <p class="ml-10 text-sm text-[#2a3da4]">ou entrar com:</p>
+            </div>
+            <div class="flex flex-row w-full justify-center items-center">
+              <div class="bg-white rounded-full w-10 p-1 shadow-[0px_1px_6px]">
+                <svg
+                  viewBox="0 0 32 32"
+                  data-name="Layer 1"
+                  id="Layer_1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="#000000"
+                >
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path
+                      d="M23.75,16A7.7446,7.7446,0,0,1,8.7177,18.6259L4.2849,22.1721A13.244,13.244,0,0,0,29.25,16"
+                      fill="#00ac47"
+                    ></path>
+                    <path
+                      d="M23.75,16a7.7387,7.7387,0,0,1-3.2516,6.2987l4.3824,3.5059A13.2042,13.2042,0,0,0,29.25,16"
+                      fill="#4285f4"
+                    ></path>
+                    <path
+                      d="M8.25,16a7.698,7.698,0,0,1,.4677-2.6259L4.2849,9.8279a13.177,13.177,0,0,0,0,12.3442l4.4328-3.5462A7.698,7.698,0,0,1,8.25,16Z"
+                      fill="#ffba00"
+                    ></path>
+                    <polygon
+                      fill="#2ab2db"
+                      points="8.718 13.374 8.718 13.374 8.718 13.374 8.718 13.374"
+                    ></polygon>
+                    <path
+                      d="M16,8.25a7.699,7.699,0,0,1,4.558,1.4958l4.06-3.7893A13.2152,13.2152,0,0,0,4.2849,9.8279l4.4328,3.5462A7.756,7.756,0,0,1,16,8.25Z"
+                      fill="#ea4435"
+                    ></path>
+                    <polygon
+                      fill="#2ab2db"
+                      points="8.718 18.626 8.718 18.626 8.718 18.626 8.718 18.626"
+                    ></polygon>
+                    <path
+                      d="M29.25,15v1L27,19.5H16.5V14H28.25A1,1,0,0,1,29.25,15Z"
+                      fill="#4285f4"
+                    ></path>
+                  </g>
+                </svg>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
+  {{/inline}}
+{{/main}}
+<!-- 
+  <div class="row justify-content-md-center mt-5">
       <div class="col col-4">
         <div class="card">
 
@@ -31,5 +162,4 @@
         </div>
       </div>
     </div>
-  {{/inline}}
-{{/main}}
+    -->
