--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,7 +1,156 @@
 {{#> main}}
   {{#*inline "content"}}
-    <h1>App</h1>
-    <h2>Estrutura Exemplo</h2>
-    <p>Bem-vindo ao seu aplicativo! Esta é uma estrutura inicial simples para sua Home.</p>
+    <section class="w-full h-screen flex flex-col justify-center" id="sessao1">
+      <div class="flex flex-row w-full justify-stretch items-center">
+        <!-- Botões de Navegação -->
+        <div class="w-[10%] items-center justify-center content-center">
+          <button
+            id="prevButton"
+            class="w-full bg-transparent text-[#2A3DA4] font-extrabold text-[50px] p-4 focus:outline-none"
+          >
+            &#10094;
+            <!-- Ícone de seta para a esquerda -->
+          </button>
+        </div>
+        <div class="w-4/5 h-[] justify-center items-center content-center">
+          <!-- Container do Carrossel -->
+          <div
+            class="relative w-full max-h-[720px] max-[450px]:h-40 overflow-hidden rounded-xl shadow-[5px_5px_15px_10px] shadow-[#2A3DA4]"
+          >
+            <!-- Slides -->
+            <div id="carousel" class="flex transition-transform duration-700">
+              <!-- Slide 1 -->
+              <div class="w-full flex-shrink-0">
+                <img
+                  src="./images/quarto-gamer-03-1.png"
+                  alt="Slide 1"
+                  class="w-full h-full object-center"
+                />
+              </div>
+              <!-- Slide 2 -->
+              <div class="w-full flex-shrink-0">
+                <img
+                  src="./images/quarto-gamer-04-1536x864.jpg"
+                  alt="Slide 2"
+                  class="w-full h-full"
+                />
+              </div>
+              <!-- Slide 3 -->
+              <div class="w-full flex-shrink-0">
+                <img
+                  src="./images/quarto-gamer-19.jpg"
+                  alt="Slide 3"
+                  class="w-full max-h-full"
+                />
+              </div>
+              <!-- Slide 4 -->
+              <div class="w-full flex-shrink-0">
+                <img
+                  src="./images/quarto-gamer-06-1024x672.jpg"
+                  alt="Slide 4"
+                  class="w-full h-full"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Botões de Navegação -->
+        <div class="w-[10%] items-center justify-center content-center">
+          <button
+            id="nextButton"
+            class="w-full bg-transparent text-[#2A3DA4] font-extrabold text-[50px] p-4 focus:outline-none"
+          >
+            &#10095;
+            <!-- Ícone de seta para a direita -->
+          </button>
+        </div>
+      </div>
+
+      <hr
+        class="w-11/12 border-[#2A3DA4] border-2 mt-6 self-center justify-self-center"
+      />
+    </section>
+
+    <section class="w-full h-screen flex justify-center" id="sessao2">
+      <div class="w-4/5 justify-center items-center flex flex-col gap-10">
+        <div class="flex flex-row w-full justify-between space-x-10">
+          <div
+            class="w-96 border-[#2a3da4] border-4 rounded-xl relative flex hover:scale-110"
+            onclick="window.location.href='./pages/item.html';"
+          >
+            <img src="./images/image-1-gamer.png" alt="" class="w-full" />
+            <p
+              class="w-full text-white font-bold text-xl text-center self-end absolute p-3"
+              style="text-shadow: 1px 4px 4px #ff00b8"
+            >
+              Setup Gamer
+            </p>
+          </div>
+          <div
+            class="w-96 border-[#2a3da4] border-4 rounded-xl relative flex hover:scale-110"
+            onclick="window.location.href='./pages/item.html';"
+          >
+            <img src="./images/image-2-gamer.png" alt="" class="w-full" />
+            <p
+              class="w-full text-white font-bold text-xl text-center self-end absolute p-3"
+              style="text-shadow: 1px 4px 4px #ff00b8"
+            >
+              Setup Gamer
+            </p>
+          </div>
+          <div
+            class="w-96 border-[#2a3da4] border-4 rounded-xl relative flex hover:scale-110"
+            onclick="window.location.href='./pages/item.html';"
+          >
+            <img src="./images/image-3-gamer.png" alt="" class="w-full" />
+            <p
+              class="w-full text-white font-bold text-xl text-center self-end absolute p-3"
+              style="text-shadow: 1px 4px 4px #ff00b8"
+            >
+              Setup Gamer
+            </p>
+          </div>
+        </div>
+
+        <div class="flex flex-row w-full justify-between space-x-10">
+          <div
+            class="w-96 border-[#2a3da4] border-4 rounded-xl relative flex hover:scale-110"
+            onclick="window.location.href='./pages/item.html';"
+          >
+            <img src="./images/image-4-gamer.png" alt="" class="w-full" />
+            <p
+              class="w-full text-white font-bold text-xl text-center self-end absolute p-3"
+              style="text-shadow: 1px 4px 4px #ff00b8"
+            >
+              Setup Gamer
+            </p>
+          </div>
+          <div
+            class="w-96 border-[#2a3da4] border-4 rounded-xl relative flex hover:scale-110"
+            onclick="window.location.href='./pages/item.html';"
+          >
+            <img src="./images/image-5-gamer.png" alt="" class="w-full" />
+            <p
+              class="w-full text-white font-bold text-xl text-center self-end absolute p-3"
+              style="text-shadow: 1px 4px 4px #ff00b8"
+            >
+              Setup Gamer
+            </p>
+          </div>
+          <div
+            class="w-96 border-[#2a3da4] border-4 rounded-xl relative flex hover:scale-110"
+            onclick="window.location.href='./pages/item.html';"
+          >
+            <img src="./images/image-6-gamer.png" alt="" class="w-full" />
+            <p
+              class="w-full text-white font-bold text-xl text-center self-end absolute p-3"
+              style="text-shadow: 1px 4px 4px #ff00b8"
+            >
+              Setup Gamer
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   {{/inline}}
 {{/main}}
