--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,59 +1,54 @@
-<!--
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - App</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lr Informática</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/public/images/titlePageicon.png"
+    />
 
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-family: Arial, sans-serif;
-      background-color: #f4f6f8;
-      color: #333;
-      text-align: center;
-    }
+    <!-- Inportação e configuração da fonte Inter -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-    .container {
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      max-width: 400px;
-    }
+    <!-- Importação do tailwind-->
+    <!--<link href="/public/css/styles.css" rel="stylesheet">-->
+    <script src="https://cdn.tailwindcss.com"></script>
+    
+  </head>
+  <body class="bg-gray-100 font-inter transition-all">
+    <!-- Navbar -->
+    <nav
+      class="bg-[#2A3DA4] py-0 px-3 flex flex-row gap-32 max-[1000px]:gap-16 w-full justify-between items-center"
+    >
+    {{> navbar}}
+    </nav>
 
-    h1 {
-      font-size: 2.5em;
-      color: #4a90e2;
-      margin-bottom: 10px;
-    }
+    <!-- Overlay (escurecimento de fundo) -->
+    <div
+      id="overlay"
+      class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden"
+    ></div>
 
-    h2 {
-      font-size: 1.5em;
-      color: #555;
-      margin-bottom: 20px;
-    }
+    
+    {{> offcanvas}}
 
-    p {
-      font-size: 1em;
-      color: #666;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
+    <div>
     {{> content}}
-  </div>
-</body>
-</html>
+    </div>
+    <footer
+      class="w-full bg-[#2A3DA4] h-fit m-0 flex flex-col text-white gap-2"
+    >
+     {{> footer}}
+    </footer>
 
--->
+    <!-- Script JavaScript -->
+    <script src="/public/js/scripts.js"></script>
+  </body>
+</html>
