--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,54 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lr Informática</title>
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/public/images/titlePageicon.png"
-    />
 
-    <!-- Inportação e configuração da fonte Inter -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lr Informática</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="/public/images/titlePageicon.png" />
 
-    <!-- Importação do tailwind-->
-    <!--<link href="/public/css/styles.css" rel="stylesheet">-->
-    <script src="https://cdn.tailwindcss.com"></script>
-    
-  </head>
-  <body class="bg-gray-100 font-inter transition-all">
-    <!-- Navbar -->
-    <nav
-      class="bg-[#2A3DA4] py-0 px-3 flex flex-row gap-32 max-[1000px]:gap-16 w-full justify-between items-center"
-    >
+  <!-- Inportação e configuração da fonte Inter -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+
+  <!-- Importação do tailwind-->
+  <!--<link href="/public/css/styles.css" rel="stylesheet">-->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+</head>
+
+<body class="bg-gray-100 font-inter transition-all">
+  <!-- Navbar -->
+  <nav class="bg-[#2A3DA4] py-0 px-3 flex flex-row gap-32 max-[1000px]:gap-16 w-full justify-between items-center">
     {{> navbar}}
-    </nav>
+  </nav>
 
-    <!-- Overlay (escurecimento de fundo) -->
-    <div
-      id="overlay"
-      class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden"
-    ></div>
+  <!-- Overlay (escurecimento de fundo) -->
+  <div id="overlay" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden"></div>
 
-    
+  <div id="offcanvas"
+    class="fixed top-0 left-0 h-full w-64 bg-gradient-to-b from-[#2A3DA4] to-transparent shadow-lg transform -translate-x-full transition-transform z-50">
     {{> offcanvas}}
-
-    <div>
+  </div>
+  <div>
     {{> content}}
-    </div>
-    <footer
-      class="w-full bg-[#2A3DA4] h-fit m-0 flex flex-col text-white gap-2"
-    >
-     {{> footer}}
-    </footer>
+  </div>
+  <footer class="w-full bg-[#2A3DA4] h-fit m-0 flex flex-col text-white gap-2">
+    {{> footer}}
+  </footer>
 
-    <!-- Script JavaScript -->
-    <script src="/public/js/scripts.js"></script>
-  </body>
+  <!-- Script JavaScript -->
+  <script src="/public/js/scripts.js"></script>
+</body>
+
 </html>
