--- a/src/views/layouts/partials/navbar.hbs
+++ b/src/views/layouts/partials/navbar.hbs
@@ -41,7 +41,7 @@
         <path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12" />
     </svg>
     <!-- icon user -->
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" stroke="#ffffff" stroke-width="2"
+    <svg class= user  ="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" stroke="#ffffff" stroke-width="2"
         stroke-linecap="round" stroke-linejoin="round"
         class="lucide lucide-user-round w-10 border-2 border-white rounded-full p-1">
         <circle cx="12" cy="8" r="5" />
