--- a/src/views/errors/404.hbs
+++ b/src/views/errors/404.hbs
@@ -28,7 +28,7 @@
 
     h1 {
       font-size: 8em;
-      color: #ff6b6b;
+      color: #2A3DA4;
       animation: shake 1s ease-in-out infinite alternate;
     }
 
