--- a/src/views/layouts/partials/navbar.hbs
+++ b/src/views/layouts/partials/navbar.hbs
@@ -9,8 +9,8 @@
             <line x1="4" x2="20" y1="18" y2="18" />
         </svg>
     </button>
-    <a href="home">
-        <img src="/public/images/titlePage.png" class="w-full p-0 m-0" />
+    <a href="/">
+        <img src="/images/titlePage.png" class=" w-52 p-0 m-0" />
     </a>
 </div>
 <div class="w-full text-[#2A3DA4] flex justify-center">
