--- a/src/views/layouts/partials/footer.hbs
+++ b/src/views/layouts/partials/footer.hbs
@@ -46,7 +46,7 @@
         </div>
         <div class="w-1/4">
           <a
-            href="#"
+            href="about"
             class="font-semibold hover:underline hover:decoration-white hover:decoration-1"
             >SOBRE NÓS</a
           >
