--- a/src/views/layouts/partials/offcanvas.hbs
+++ b/src/views/layouts/partials/offcanvas.hbs
@@ -17,7 +17,7 @@
           </button>
           <button
             class="bg-white w-2/3 text-[#2A3DA4] border-2 border-transparent font-semibold px-4 py-2 rounded-lg transition-colors duration-300 hover:bg-transparent hover:text-white hover:border-white"
-            onclick="window.location.href='login';"
+            onclick="window.location.href='auth/login';"
           >
             LOGIN
           </button>
@@ -27,7 +27,7 @@
         <ul class="mt-6">
           <li>
             <a
-              href="home"
+              href="/"
               class="block m-2 p-1 bg-white text-[#2A3DA4] border-2 border-transparent font-semibold px-4 py-2 rounded-lg transition-colors duration-300 hover:bg-transparent hover:text-white hover:border-white"
               >PAGINA INICIAL</a
             >
@@ -37,13 +37,6 @@
               href="#"
               class="block m-2 p-1 bg-white text-[#2A3DA4] border-2 border-transparent font-semibold px-4 py-2 rounded-lg transition-colors duration-300 hover:bg-transparent hover:text-white hover:border-white"
               >FAVORITOS</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="block m-2 p-1 bg-white text-[#2A3DA4] border-2 border-transparent font-semibold px-4 py-2 rounded-lg transition-colors duration-300 hover:bg-transparent hover:text-white hover:border-white"
-              >SOBRE NÓS</a
             >
           </li>
         </ul>
