--- a/src/views/auth/profile.hbs
+++ b/src/views/auth/profile.hbs
@@ -2,7 +2,7 @@
   {{#*inline "content"}}
     <h1 class="mt-5">Sobre {{ user.username }}!</h1>
       <p class="lead">{{ user.username }}'s friend {{ user.pet.name }}</p>
-      <p><a href='/logout'>Deslogar</a></p>
+      <p><a href='/auth/logout'>Deslogar</a></p>
     </h1>
   {{/inline}}
 {{/main}}
