--- a/src/views/users/index.hbs
+++ b/src/views/users/index.hbs
@@ -20,21 +20,47 @@
                 + </a>
         </div>
     </div>
-
+    {{#unless users}}
+        <p> Nenhum usuarios encontrado</p>
+    {{/unless}}
+    {{#if users}}
     <table class="min-w-full bg-white">
         <thead>
             <tr>
                 <th class="py-2 px-4 border-b">Nome</th>
-                <th class="py-2 px-4 border-b">Genero</th>
                 <th class="py-2 px-4 border-b">Email</th>
                 <th class="py-2 px-4 border-b">CPF</th>
+                <th class="py-2 px-4 border-b">Opções</th>
             </tr>
         </thead>
         <tbody>
-            <!-- Linhas da tabela serão inseridas aqui -->
+            {{#each users}}
+            <tr>
+                <td class="py-2 px-4 border-b"> 
+                    <p>
+                        {{this.nome}}
+                    </p>
+                </td>
+                <td class="py-2 px-4 border-b"> 
+                    <p>
+                        {{this.email}}
+                    </p>
+                </td>
+                <td> 
+                    <p>
+                        {{this.cpf}}
+                    </p>
+                </td>
+                <td class="py-2 px-4 border-b"> 
+                    <p class="">
+                        -
+                    </p>
+                </td>
+            </tr>
+            {{/each}}
         </tbody>
     </table>
-
+    {{/if}}
 </div>
 {{/inline}}
 {{/main}}
