--- a/src/views/peripheral/form.hbs
+++ b/src/views/peripheral/form.hbs
@@ -39,7 +39,7 @@
       CADASTRAR
     </button>
     <div class="m-2">
-      <a href="/perifericos" class="text-red-700 font-extrabold text-sm hover:underline">Cancelar</a>
+      <a href="/peripheral" class="text-red-700 font-extrabold text-sm hover:underline">Cancelar</a>
     </div>
   </form>
 </div>
