--- a/src/views/computer/index.hbs
+++ b/src/views/computer/index.hbs
@@ -1,7 +1,7 @@
 {{#> main}}
 {{#*inline "content"}}
 <div class="w-full h-screen flex flex-col justify-start items-center mt-28">
-    <h2 class="text-3xl font-bold m-4 text-center">Periféricos</h2>
+    <h2 class="text-3xl font-bold m-4 text-center">Computadores</h2>
     <div class="flex flex-row min-w-full justify-between items-center">
 
     <div class="flex mb-4 ml-5">
@@ -15,7 +15,7 @@
             </svg>
         </button>
     </div>
-        <div class="p-4 w-4 h-2 justify-end mr-8 mb-3"> <a href="/perifericos/create"
+        <div class="p-4 w-4 h-2 justify-end mr-8 mb-3"> <a href="/computer/create"
                 class="bg-green-500 text-white font-bold text-xl p-2 rounded-md hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-500">
                 + </a>
         </div>
