--- a/src/views/layouts/partials/offcanvas.hbs
+++ b/src/views/layouts/partials/offcanvas.hbs
@@ -1,3 +1,4 @@
+<!-- /src/views/layouts/partials -->
 <!-- Offcanvas -->
 
 <div class="p-4">
@@ -32,6 +33,8 @@
         >PAGINA INICIAL</a
       >
     </li>
+    {{#if user}}
+    
     <li>
       <a
         href="#"
@@ -39,14 +42,30 @@
         >FAVORITOS</a
       >
     </li>
-    {{#if user}}
+
     <li>
       <a
         href="#"
         class="block m-2 p-1 bg-white text-[#2A3DA4] border-2 border-transparent font-semibold px-4 py-2 rounded-lg transition-colors duration-300 hover:bg-transparent hover:text-white hover:border-white"
-        >USUARIOS</a
+        >MEU CARRINHO</a
+      >
+    </li>
+
+    <li>
+      <a
+        href="#"
+        class="block m-2 p-1 bg-white text-[#2A3DA4] border-2 border-transparent font-semibold px-4 py-2 rounded-lg transition-colors duration-300 hover:bg-transparent hover:text-white hover:border-white"
+        >PEDIDOS</a
       >
     </li>
     {{/if}}
+    
+    <li>
+      <a
+        href="/about"
+        class="block m-2 p-1 bg-white text-[#2A3DA4] border-2 border-transparent font-semibold px-4 py-2 rounded-lg transition-colors duration-300 hover:bg-transparent hover:text-white hover:border-white"
+        >SOBRE NÓS</a
+      >
+    </li>
   </ul>
 </div>
