--- a/src/views/auth/login.hbs
+++ b/src/views/auth/login.hbs
@@ -7,7 +7,7 @@
       <div
         class="w-80 h-[550px] bg-gray-200 rounded-lg shadow-[0px_0px_15px_-5px_#2A3DA4]"
       >
-        <form action="/auth/login" method="post">
+        <form action="/auth/login" method="POST">
               
           <div class="flex flex-col justify-center items-center my-8">
             <p
@@ -137,36 +137,3 @@
     </section>
   {{/inline}}
 {{/main}}
-<!-- 
-  <div class="row justify-content-md-center mt-5">
-      <div class="col col-4">
-        <div class="card">
-
-          <div class="card-header text-center">
-            Acessar App
-          </div>
-
-          <div class="card-body">
-            <form action="/login" method="post"> 
-
-              {{#if message }}
-                <div class="alert alert-danger text-center" role="alert" style="font-size: .8rem;">
-                  {{ message }}
-                </div>
-              {{/if}}
-
-              <div class="mb-3">
-                <label for="username" class="form-label">Usuário</label>
-                <input type="text" class="form-control" name="username" id="username">
-              </div>
-              <div class="mb-3">
-                <label for="password" class="form-label">Senha</label>
-                <input type="password" class="form-control" name="password" id="password">
-              </div>
-              <button type="submit" class="btn btn-primary">Acessar</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-    -->
