--- a/src/views/layouts/partials/offcanvas.hbs
+++ b/src/views/layouts/partials/offcanvas.hbs
@@ -16,12 +16,20 @@
         />
       </svg>
     </button>
-    <button
-      class="bg-white w-2/3 text-[#2A3DA4] border-2 border-transparent font-semibold px-4 py-2 rounded-lg transition-colors duration-300 hover:bg-transparent hover:text-white hover:border-white"
-      onclick="window.location.href='auth/login';"
-    >
-      LOGIN
-    </button>
+    {{#if user}}
+      <!-- Exibe o nome do usuário se estiver logado -->
+      <div class="text-white font-semibold flex items-center">
+        Olá, {{user.nome}}
+      </div>
+    {{else}}
+      <!-- Exibe o botão de login se não estiver logado -->
+      <button
+        class="bg-white w-2/3 text-[#2A3DA4] border-2 border-transparent font-semibold px-4 py-2 rounded-lg transition-colors duration-300 hover:bg-transparent hover:text-white hover:border-white"
+        onclick="window.location.href='auth/login';"
+      >
+        LOGIN
+      </button>
+    {{/if}}
   </div>
 
   <!-- Itens do menu -->
@@ -68,4 +76,30 @@
       >
     </li>
   </ul>
+  <!-- Ícone de sair no canto inferior direito -->
+  {{#if user}}
+  <div class="mt-auto flex justify-end">
+    <a
+      href="/auth/logout"
+      class="text-white hover:text-gray-300 transition-colors duration-300"
+      title="Sair"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="currentColor"
+        class="bi bi-box-arrow-right w-8 h-8"
+        viewBox="0 0 16 16"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"
+        />
+        <path
+          fill-rule="evenodd"
+          d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"
+        />
+      </svg>
+    </a>
+  </div>
+  {{/if}}
 </div>
